api spec for get all categories

--- a/docs/apispec.yml
+++ b/docs/apispec.yml
@@ -1,12 +1,33 @@
 openapi: '3.0.3'
 info:
-  title: API Title
-  version: '1.0'
+  title: Category Restful API
+  description: API spec to learn RESTful API in golang
+    through building a category API
+  version: '1.0.0'
 servers:
-  - url: https://api.server.test/v1
+  - url: http://localhost:3000/api
 paths:
-  /test:
+  /categories:
     get:
+      description: Get all categories
       responses:
         '200':
-          description: OK
+          description: Success get all categories
+          content: 
+            application/json: 
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: number
+                        name:
+                          type: string
