--- a/docs/apispec.yml
+++ b/docs/apispec.yml
@@ -2,13 +2,19 @@ openapi: '3.0.3'
 info:
   title: Category Restful API
   description: API spec to learn RESTful API in golang
-    through building a category API
+    through building category API
   version: '1.0.0'
 servers:
   - url: http://localhost:3000/api
 paths:
   /categories:
     get:
+      security:
+        - CategoryAuth : []
+      
+      tags:
+        - Category API
+      summary: Get all categories
       description: Get all categories
       responses:
         '200':
@@ -25,9 +31,142 @@ paths:
                   data:
                     type: array
                     items:
-                      type: object
-                      properties:
-                        id:
-                          type: number
-                        name:
-                          type: string
+                      $ref: "#/components/schemas/Category"
+    post:
+      security:
+        - CategoryAuth : []
+      
+      tags:
+        - Category API
+      summary: Create new category
+      description: Create new category
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateOrUpdateCategory"
+      responses:
+        200:
+          description: "Success create category"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+                  data:
+                    $ref: "#/components/schemas/Category"
+  /categories/{categoryId}:
+    get:
+      security:
+        - CategoryAuth : []
+      
+      tags:
+        - Category API
+      summary: Get category by id
+      description: Get spesific category by id
+      parameters:
+        - name: categoryId
+          in: path
+          description: Category Id
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success get category
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+                  data:
+                    $ref: "#/components/schemas/Category"
+    put:
+      security:
+        - CategoryAuth : []
+      
+      tags:
+        - Category API
+      summary: Update category by id
+      description: Update spesific category by id
+      parameters:
+        - name: categoryId
+          in: path
+          description: Category Id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateOrUpdateCategory"
+      responses:
+        200:
+          description: Success update category
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+                  data:
+                    $ref: "#/components/schemas/Category"
+    delete:
+      security:
+        - CategoryAuth : []
+      
+      tags:
+        - Category API
+      summary: Delete category by id
+      description: Delete spesific category by id
+      parameters:
+        - name: categoryId
+          in: path
+          description: Category Id
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success deleted category
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+components:
+  securitySchemes:
+    CategoryAuth:
+      type: apiKey
+      in: header
+      name: X-API-Key
+      description: Authentication for Category API
+  schemas:
+    CreateOrUpdateCategory:
+      type: object
+      properties:
+        name:
+          type: string
+    Category:
+      type: object
+      properties:
+        id:
+          type: number
+        name:
+          type: string
